--- a/index.ipynb
+++ b/index.ipynb
@@ -118,12 +118,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'art.vandelay@vandelay.co'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
-    "email=\"art.vandelay@vandelay.co\""
+    "email=\"art.vandelay@vandelay.co\"\n",
+    "email"
    ]
   },
   {
